deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-page-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: html-page
  template:
    metadata:
      labels:
        app: html-page
    spec:
      containers:
      - name: html-page
        image: dockR.azurecr.io/html-hm:latest
        ports:
        - containerPort: 80
